# ignite

./: .buildinfo  .deepsource.toml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  _config.yml  about.html  codecov.yml  concepts.html  defaults.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  mypy.ini  netlify.toml  objects.inv  py-modindex.html  pyproject.toml  pyrefly.toml  quickstart.html  requirements-check.txt  requirements-dev.txt  search.html  searchindex.js  setup.cfg  (+5 more)
.circleci/: config.yml  trigger_if_modified.sh
.devcontainer/: devcontainer.json
.doctrees/: defaults.doctree  distributed.doctree  engine.doctree  environment.pickle  exceptions.doctree  handlers.doctree  index.doctree  metrics.doctree  utils.doctree
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  failed_schedule_issue_template.md  issue-labeler.yml  labeler.yml  pr-labeler-config.yml  pr-labeler.yml
.travis/: build_docs.sh  install_deps.sh  install_docs_deps.sh
_modules/: index.html
_sources/: engine.rst.txt  handlers.rst.txt  index.rst.txt  metrics.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
conda.recipe/: build_and_upload.sh  meta.yaml
contrib/: engines.html  handlers.html  metrics.html
docker/: Dockerfile  Dockerfile.tests  Dockerfile_examples  README.md  build.sh  docker.cfg  push_all.sh  test_image.py
docs/: Makefile  autosummary.patch  make.bat  requirements.txt
examples/: actor_critic.py  dcgan.py  mnist.py  mnist_save_restore_engine.py  mnist_with_tensorboard.py  mnist_with_tensorboardx.py  mnist_with_visdom.py
ignite/: __init__.py  _pep562.py  _six.py  _utils.py  engine.py  evaluator.py  exceptions.py  fixme.py  hash.py  history.py  metrics.py  trainer.py  utils.py
master/: .buildinfo  about.html  concepts.html  defaults.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
nightly/: setup_nightly.py
test/: test_trainer.py
tests/: common-test-functionality.sh  common_test_functionality.sh  run_code_style.bat  run_code_style.sh  run_cpu_tests.sh  run_gpu_tests.sh  run_multinode_tests_in_docker.sh  run_tpu_tests.sh  test_trainer.py
v0.1.0/: .buildinfo  concepts.html  engine.html  exceptions.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
v0.1.1/: .buildinfo  concepts.html  engine.html  examples.html  exceptions.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
v0.1.2/: .buildinfo  concepts.html  engine.html  examples.html  exceptions.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
v0.2.0/: .buildinfo  concepts.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.2.1/: .buildinfo  concepts.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.3.0/: .buildinfo  concepts.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.4.0.post1/: .buildinfo  about.html  concepts.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.4.1/: .buildinfo  about.html  concepts.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.4.10/: .buildinfo  about.html  concepts.html  defaults.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.4.11/: .buildinfo  defaults.html  distributed.html  engine.html  exceptions.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html
v0.4.12/: .buildinfo  defaults.html  distributed.html  engine.html  exceptions.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html
v0.4.13/: .buildinfo  defaults.html  distributed.html  engine.html  exceptions.html  genindex.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html
v0.4.2/: .buildinfo  about.html  concepts.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.4.3/: .buildinfo  about.html  concepts.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  governance.html  handlers.html  index.html  metrics.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  utils.html
v0.4.4.post1/: .buildinfo  about.html  concepts.html  distributed.html  engine.html  examples.html  exceptions.html  faq.html  genindex.html  (+10 more)
(+3715 files in other folders)
