[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "pytorch-ignite"
authors = [
    {name = "PyTorch-Ignite Team", email = "contact@pytorch-ignite.ai"},
]
description = "A lightweight library to help with training neural networks in PyTorch."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=1.3,<3",
    "packaging"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pytorch-ignite.ai"
Repository = "https://github.com/pytorch/ignite"

[tool.hatch.version]
path = "ignite/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ignite"]
only-include = ["ignite"]
artifacts = [
  "*.typed",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | assets
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.usort.known]
first_party = [
    "ignite",
]
third_party = [
    "clearml",
    "dill",
    "matplotlib",
    "numpy",
    "pkg_resources",
    "pytest",
    "requests",
    "setuptools",
    "skimage",
    "sklearn",
    "torch",
    "torchvision",
]

[tool.ufmt]
excludes = [
    "assets/",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pytorch-ignite = { path = ".", editable = true }

[tool.pixi.tasks]
