[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pycodestyle]
exclude = .eggs,*.egg,build,docs/*,.git,versioneer.py,*/conf.py
ignore = E402, E721
max_line_length = 120

[flake8]
max-line-length = 120
ignore = E203,E231,E305,E402,E721,E722,E741,F401,F403,F405,F821,F841,F999,W503

[tool:pytest]
markers =
    distributed: mark a test with distributed option
    multinode_distributed: mark a test with multi-node distributed option