[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pycodestyle]
exclude = .eggs,*.egg,build,docs/*,.git,versioneer.py,*/conf.py
ignore = E402, E721
max_line_length = 120

[isort]
known_third_party=matplotlib,numpy,pytest,setuptools,sklearn,torch
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=120
skip_glob=docs/**,examples/**
filter_files=True
